--- a/Dynamic_Templates/views/layouts/main.handlebars
+++ b/Dynamic_Templates/views/layouts/main.handlebars
@@ -20,14 +20,16 @@
     <header class="main-header">
         <nav class="main-header__nav">
             <ul class="main-header__item-list">
-                <li class="main-header__item"><a class="{{#if activeShop}}active" href="/">Shop</a></li>
-                <li class="main-header__item"><a class="{{#if activeAddProduct}}active" href="/admin/add-product">Add
-                        Product</a></li>
+                <li class="main-header__item">
+                    <a class="{{#if activeShop}}active{{/if}}" href="/">Shop</a>
+                </li>
+                <li class="main-header__item">
+                    <a class="{{#if activeAddProduct}}active{{/if}}" href="/admin/add-product">Add Product</a>
+                </li>
             </ul>
         </nav>
     </header>
     {{{body}}}
-    <h1>Page Not Found!</h1>
 </body>
 
 </html>
